--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -55,9 +55,26 @@ h4 {
   gap: 1rem;
 }
 
+.infinite-scroll-component {
+  width: 100%;
+  display: grid;
+  margin: 3rem auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-items: center;
+  gap: 20px;
+  row-gap: 20px;
+}
+
 @media only screen and (max-width: 1023px) {
   .column {
     grid-template-columns: 1fr;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .infinite-scroll-component {
+    width: 90%;
+  }
+}
+
 /* Extra for repeat */
